# OOP

./: README.md
lab1/: CMakeLists.txt  README.md  main.cpp  sol.cpp  sol.h
lab1/test/: test01.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/src/: Thirteen.cpp  utils.cpp
lab2/test/: thirteen_test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/src/: rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab3/test/: tests.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.h  figure.h  point.h  rectangle.h  rhombus.h  trapezoid.h  utils.h
lab4/test/: test.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/src/: memory.cpp
lab5/tests/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: bear.h  npc.h  observers.h  vup.h  vykhuhol.h
lab6/src/: bear.cpp  factory.cpp  npc.cpp  visitor.cpp  vup.cpp  vykhuhol.cpp
lab6/tests/: test.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: bear.h  common.h  factory.h  fight_manager.h  npc.h  observers.h  vup.h  vykhuhol.h
lab7/src/: bear.cpp  factory.cpp  npc.cpp  visitor.cpp  vup.cpp  vykhuhol.cpp
lab7/tests/: test.cpp
